force-app/main/default/objects/ResidentialLoanApplication/fields/Administration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Administration_Fee__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Administration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>