force-app/main/default/objects/ResidentialLoanApplication/fields/All_Parties_Fees__c.field-meta.xml
<CustomField>
    <fullName>All_Parties_Fees__c</fullName>
    <formula>if ( text( CJA_Mortgage__Embed_Broker_into_Lender_Fees__c ) = &quot;Yes&quot;,

 AWC_Fee__c +  Total_Broker_Fee__c ,

AWC_Fee__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Parties Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>