force-app/main/default/objects/ResidentialLoanApplication/fields/Anticipated_IAD__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_IAD__c</fullName>
    <formula>Blended_Loan_Amount__c * Blended_Interest_Rate__c / 365 * ( Interest_Adjustment_Date__c - DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anticipated IAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>