force-app/main/default/objects/ResidentialLoanApplication/fields/Appraisal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Fee__c</fullName>
    <defaultValue>400</defaultValue>
    <label>Appraisal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>