force-app/main/default/objects/ResidentialLoanApplication/fields/Approval_Cancellation_date_time__c.field-meta.xml
<CustomField>
    <fullName>Approval_Cancellation_date_time__c</fullName>
    <inlineHelpText>The date on which the Application is approved/canceled.</inlineHelpText>
    <label>Pending Approval/Cancellation Date/Time</label>
    <type>DateTime</type>
</CustomField>