force-app/main/default/objects/ResidentialLoanApplication/fields/Approved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Time__c</fullName>
    <inlineHelpText>The date on which Application was approved</inlineHelpText>
    <label>Approved Date/Time</label>
    <type>DateTime</type>
</CustomField>