force-app/main/default/objects/ResidentialLoanApplication/fields/Approved_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approved_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Notification Sent</label>
    <type>Checkbox</type>
</CustomField>