force-app/main/default/objects/ResidentialLoanApplication/fields/AWC_Fee__c.field-meta.xml
<CustomField>
    <fullName>AWC_Fee__c</fullName>
    <formula>/*Total_Lender_Fee__c + Total_Third_Party_Fee__c*/ 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWC Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>