force-app/main/default/objects/ResidentialLoanApplication/fields/AWC_minus_Fund_Fees__c.field-meta.xml
<CustomField>
    <fullName>AWC_minus_Fund_Fees__c</fullName>
    <formula>AWC_Fee__c -  Total_Fund_Fees__c -  Total_Third_Party_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWC minus Fund Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>