force-app/main/default/objects/ResidentialLoanApplication/fields/Blended_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Blended_Interest_Rate__c</fullName>
    <formula>Senior_Interest_Rate__c + Junior_Interest_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Interest Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>