force-app/main/default/objects/ResidentialLoanApplication/fields/Blended_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Blended_Loan_Amount__c</fullName>
    <formula>Senior_Loan_Amount__c + Junior_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>