force-app/main/default/objects/ResidentialLoanApplication/fields/Blended_LTV__c.field-meta.xml
<CustomField>
    <fullName>Blended_LTV__c</fullName>
    <formula>Senior_LTV__c + Junior_LTV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>