force-app/main/default/objects/ResidentialLoanApplication/fields/Blended_LTV_nintex__c.field-meta.xml
<CustomField>
    <fullName>Blended_LTV_nintex__c</fullName>
    <formula>Blended_LTV__c *10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended LTV (nintex)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>