force-app/main/default/objects/ResidentialLoanApplication/fields/Blended_Payment__c.field-meta.xml
<CustomField>
    <fullName>Blended_Payment__c</fullName>
    <formula>Senior_Payment__c + Junior_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blended Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>