force-app/main/default/objects/ResidentialLoanApplication/fields/Borrower_Solicitor__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Solicitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Borrower Solicitor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications (Borrower Solicitor)</relationshipLabel>
    <relationshipName>Residential_Loan_Applications4</relationshipName>
    <type>Lookup</type>
</CustomField>