force-app/main/default/objects/ResidentialLoanApplication/fields/Broker_BDO__c.field-meta.xml
<CustomField>
    <fullName>Broker_BDO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>