force-app/main/default/objects/ResidentialLoanApplication/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <formula>If (OR( ISBLANK( Contact__r.Account.ParentId  ) , ISNULL( Contact__r.Account.ParentId) ),
 Contact__r.Account.Name  ,
 Contact__r.Account.Parent.Name  &amp; &quot; - &quot; &amp; Contact__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage</label>
    <type>Text</type>
</CustomField>