force-app/main/default/objects/ResidentialLoanApplication/fields/Charges_Included_in_TCC__c.field-meta.xml
<CustomField>
    <fullName>Charges_Included_in_TCC__c</fullName>
    <formula>Total_Charges__c + Appraisal_Fee__c - Interest_Reserve_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charges Included in TCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>