force-app/main/default/objects/ResidentialLoanApplication/fields/CJA_Mortgage__Notes__c.field-meta.xml
<CustomField>
    <fullName>CJA_Mortgage__Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>