force-app/main/default/objects/ResidentialLoanApplication/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <formula>DATEVALUE( CJA_Mortgage__Estimated_Closing_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>