force-app/main/default/objects/ResidentialLoanApplication/fields/Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Date__c</fullName>
    <label>Commitment Date</label>
    <type>Date</type>
</CustomField>