force-app/main/default/objects/ResidentialLoanApplication/fields/Commitment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Date_Time__c</fullName>
    <inlineHelpText>The date on which the commitment was recieved</inlineHelpText>
    <label>Commitment Date/Time</label>
    <type>DateTime</type>
</CustomField>