force-app/main/default/objects/ResidentialLoanApplication/fields/Commitment_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Commitment letter sent for the Application?</inlineHelpText>
    <label>Commitment Letter Sent</label>
    <type>Checkbox</type>
</CustomField>