force-app/main/default/objects/ResidentialLoanApplication/fields/Condo_Fee__c.field-meta.xml
<CustomField>
    <fullName>Condo_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Condo Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>