force-app/main/default/objects/ResidentialLoanApplication/fields/Consumer_Protection_Act_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Protection_Act_Name__c</fullName>
    <formula>CASE ( Deal_Province__c,

&quot;AB&quot;,
&quot;Consumer Protection Act of Alberta&quot;,

&quot;BC&quot;,
&quot;Business Practices and Consumer Protection Act&quot;,

&quot;Consumer Protection Act 2002 Ontario&quot;
)</formula>
    <label>Consumer Protection Act Name</label>
    <type>Text</type>
</CustomField>