force-app/main/default/objects/ResidentialLoanApplication/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Residential Loan Applications (Contact)</relationshipLabel>
    <relationshipName>Residential_Loan_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>