force-app/main/default/objects/ResidentialLoanApplication/fields/Date_of_Override__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Override__c</fullName>
    <inlineHelpText>The date on which the Risk Rating was overridden.</inlineHelpText>
    <label>Date of Override:</label>
    <type>Date</type>
</CustomField>