force-app/main/default/objects/ResidentialLoanApplication/fields/Deal_Province__c.field-meta.xml
<CustomField>
    <fullName>Deal_Province__c</fullName>
    <label>Deal Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>