force-app/main/default/objects/ResidentialLoanApplication/fields/Debt_Items_to_Pay_off__c.field-meta.xml
<CustomField>
    <fullName>Debt_Items_to_Pay_off__c</fullName>
    <label>Debt Items to Pay off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>