force-app/main/default/objects/ResidentialLoanApplication/fields/Diff_closingdate_interestadjustmentdate__c.field-meta.xml
<CustomField>
    <fullName>Diff_closingdate_interestadjustmentdate__c</fullName>
    <formula>Interest_Adjustment_Date__c - DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff closingdate interestadjustmentdate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>