force-app/main/default/objects/ResidentialLoanApplication/fields/EDD_notes__c.field-meta.xml
<CustomField>
    <fullName>EDD_notes__c</fullName>
    <label>EDD notes</label>
    <type>TextArea</type>
</CustomField>