force-app/main/default/objects/ResidentialLoanApplication/fields/EDD_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>EDD_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EDD Notification Sent</label>
    <type>Checkbox</type>
</CustomField>