force-app/main/default/objects/ResidentialLoanApplication/fields/Enclose_C_A_of_ID_Form__c.field-meta.xml
<CustomField>
    <fullName>Enclose_C_A_of_ID_Form__c</fullName>
    <formula>if ( OR(Deal_Province__c = &quot;AB&quot;, Deal_Province__c = &quot;BC&quot;, Deal_Province__c = &quot;ON&quot;) , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enclose C A of ID Form</label>
    <type>Checkbox</type>
</CustomField>