force-app/main/default/objects/ResidentialLoanApplication/fields/Enclose_Mortgage_Loan_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Enclose_Mortgage_Loan_Commitment__c</fullName>
    <formula>if ( OR(Deal_Province__c = &quot;AB&quot;, Deal_Province__c = &quot;BC&quot;, Deal_Province__c = &quot;ON&quot;) , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enclose Mortgage Loan Commitment</label>
    <type>Checkbox</type>
</CustomField>