force-app/main/default/objects/ResidentialLoanApplication/fields/Enclose_ON_Letter_of_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Enclose_ON_Letter_of_Instruction__c</fullName>
    <formula>if ( Deal_Province__c = &quot;ON&quot; , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enclose ON Letter of Instruction</label>
    <type>Checkbox</type>
</CustomField>