force-app/main/default/objects/ResidentialLoanApplication/fields/Enclose_Std_Mortgage_Terms__c.field-meta.xml
<CustomField>
    <fullName>Enclose_Std_Mortgage_Terms__c</fullName>
    <formula>if ( Deal_Province__c = &quot;AB&quot; , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enclose Std Mortgage Terms</label>
    <type>Checkbox</type>
</CustomField>