force-app/main/default/objects/ResidentialLoanApplication/fields/Excluded_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Conditions__c</fullName>
    <label>Excluded Conditions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>