force-app/main/default/objects/ResidentialLoanApplication/fields/factor_rental_Income_As__c.field-meta.xml
<CustomField>
    <fullName>factor_rental_Income_As__c</fullName>
    <label>factor rental Income As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offset</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>