force-app/main/default/objects/ResidentialLoanApplication/fields/Future_Value__c.field-meta.xml
<CustomField>
    <fullName>Future_Value__c</fullName>
    <formula>( Blended_Loan_Amount__c * ( EXP ( (Loan_Term__c * 12 ) * LN ( 1 +( Blended_Interest_Rate__c /12 ) ) ) ) )
-
(round(Blended_Payment__c,2) * ( ( EXP ( ( Loan_Term__c * 12) * LN ( 1+ (Blended_Interest_Rate__c / 12 ) ) ) ) -1 ) /
( Blended_Interest_Rate__c /12 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Future Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>