force-app/main/default/objects/ResidentialLoanApplication/fields/GDS__c.field-meta.xml
<CustomField>
    <fullName>GDS__c</fullName>
    <formula>( Total_Housing_Costs__c + ( Condo_Fee__c * 0.5) )
/ ((CJA_Mortgage__Total_Regular_Income1__c/12))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>