force-app/main/default/objects/ResidentialLoanApplication/fields/Has_the_Client_Risk_Assessment_Complete__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Client_Risk_Assessment_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have all of the questions in the Client Risk Assessment form been answered as a part of this Application&apos;s compliance review?</inlineHelpText>
    <label>Client Risk Assessment Completed?</label>
    <type>Checkbox</type>
</CustomField>