force-app/main/default/objects/ResidentialLoanApplication/fields/Has_the_Transaction_Checklist_Completed__c.field-meta.xml
<CustomField>
    <fullName>Has_the_Transaction_Checklist_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have all of the questions in the transaction checklist been answered as a part of this Application&apos;s compliance review?</inlineHelpText>
    <label>Transaction Checklist Completed?</label>
    <type>Checkbox</type>
</CustomField>