force-app/main/default/objects/ResidentialLoanApplication/fields/Included_Completed_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Included_Completed_Conditions__c</fullName>
    <label>Included &amp; Completed Conditions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>