force-app/main/default/objects/ResidentialLoanApplication/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <formula>CASE ( Total_Applicants__c ,

1, &quot;Initials _____&quot;,
2, &quot;Initials _____/_____&quot;,
3, &quot;Initials _____/_____/_____&quot;,
4, &quot;Initials _____/_____/_____/_____&quot;,
5, &quot;Initials _____/_____/_____/_____/_____&quot;,
6, &quot;Initials _____/_____/_____/_____/_____/_____&quot;,
7, &quot;Initials _____/_____/_____/_____/_____/_____/_____&quot;,
8, &quot;Initials _____/_____/_____/_____/_____/_____/_____/_____&quot;,
9, &quot;Initials _____/_____/_____/_____/_____/_____/_____/_____/_____&quot;,
&quot;Initials _____/_____/_____/_____/_____/_____/_____/_____/_____/_____&quot;
)</formula>
    <label>Initials</label>
    <type>Text</type>
</CustomField>