force-app/main/default/objects/ResidentialLoanApplication/fields/Inspection_Fee__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Fee__c</fullName>
    <defaultValue>199</defaultValue>
    <label>Inspection Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>