force-app/main/default/objects/ResidentialLoanApplication/fields/Instruction_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Instruction_Package_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instruction Package Sent</label>
    <type>Checkbox</type>
</CustomField>