force-app/main/default/objects/ResidentialLoanApplication/fields/Interest_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adjustment__c</fullName>
    <formula>( Blended_Loan_Amount__c * Blended_Interest_Rate__c / 365)  * (Diff_closingdate_interestadjustmentdate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>