force-app/main/default/objects/ResidentialLoanApplication/fields/Interest_Adjustment_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adjustment_Date__c</fullName>
    <formula>IF(ISPICKVAL(lending_Application_Type__c,&apos;Lending Application Records&apos;) ,

IF(DAY(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c))=1,DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c),

IF(MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c)) = 12,
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c))+1, 1, 1 ),
DATE(YEAR(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c)), MONTH(DATEVALUE(CJA_Mortgage__Estimated_Closing_Date__c))+1, 1 )
)
),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Monthly&apos;),
ADDMONTHS( First_Payment_Date__c,-1),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Annually&apos;),
ADDMONTHS( First_Payment_Date__c,-12),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Semi-Annually&apos;),
ADDMONTHS( First_Payment_Date__c,-6),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Quarterly&apos;),
ADDMONTHS( First_Payment_Date__c,-3),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Bi-Monthly&apos;),
ADDMONTHS( First_Payment_Date__c,-2),
IF(ISPICKVAL(Payment_Frequency__c, &apos;Semi-Monthly&apos;),
ADDMONTHS( First_Payment_Date__c+ 14,- 1),
IF(OR(ISPICKVAL(Payment_Frequency__c, &apos;Bi-Weekly&apos;),ISPICKVAL(Payment_Frequency__c, &apos;Acc Bi-Weekly&apos;)),
First_Payment_Date__c- 14,
IF(OR(ISPICKVAL(Payment_Frequency__c, &apos;Weekly&apos;),ISPICKVAL(Payment_Frequency__c, &apos;Acc Weekly&apos;)) ,
First_Payment_Date__c- 7,
First_Payment_Date__c)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Adjustment Date</label>
    <type>Date</type>
</CustomField>