force-app/main/default/objects/ResidentialLoanApplication/fields/Interest_Reserve_Fee__c.field-meta.xml
<CustomField>
    <fullName>Interest_Reserve_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Interest Reserve Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>