force-app/main/default/objects/ResidentialLoanApplication/fields/Is_EDD_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_EDD_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the needed EDD form completed for this application?</inlineHelpText>
    <label>Is EDD Completed w/ 2nd approval?</label>
    <type>Checkbox</type>
</CustomField>