force-app/main/default/objects/ResidentialLoanApplication/fields/Is_UTR_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_UTR_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the needed UTR completed for this application?</inlineHelpText>
    <label>Is UTR Complete?</label>
    <type>Checkbox</type>
</CustomField>