force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Junior_Broker_Fee__c</fullName>
    <formula>IF(
ISPICKVAL(Junior_Broker_Fee_Type__c, &quot;Percent&quot;),
Junior_Loan_Amount__c * Junior_Broker_Fee_Percent__c,
Junior_Broker_Fee_Custom__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Junior Broker Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>