force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Junior_Interest_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junior Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>