force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Lender_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Junior_Lender_Fee_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junior Lender Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>