force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Junior_Loan_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junior Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>