force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_LTV__c.field-meta.xml
<CustomField>
    <fullName>Junior_LTV__c</fullName>
    <label>Junior LTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>