force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Payment__c.field-meta.xml
<CustomField>
    <fullName>Junior_Payment__c</fullName>
    <formula>if(Junior_Loan_Amount__c != 0  &amp;&amp; Junior_Interest_Rate__c &gt; 0,
if (Senior_Amortization__c &gt;  0,
(Junior_Loan_Amount__c * ((Junior_Interest_Rate__c / 100) / 12) / (1 - ((1/(1 + ((Junior_Interest_Rate__c / 100) / 12))) ^  (Senior_Amortization__c * 12))))
,(Junior_Loan_Amount__c  * ((Junior_Interest_Rate__c / 100) / 12)))
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Junior Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>