force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Third_Party_Fee__c.field-meta.xml
<CustomField>
    <fullName>Junior_Third_Party_Fee__c</fullName>
    <formula>IF(
ISPICKVAL(Junior_Third_Party_Fee_Type__c, &quot;Percent&quot;),
Junior_Loan_Amount__c * Junior_Third_Party_Fee_Percent__c,
Junior_Third_Party_Fee_Custom__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Junior Third Party Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>