force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Third_Party_Fee_Custom__c.field-meta.xml
<CustomField>
    <fullName>Junior_Third_Party_Fee_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junior Third Party Fee Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>