force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Third_Party_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Junior_Third_Party_Fee_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junior Third Party Fee Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>