force-app/main/default/objects/ResidentialLoanApplication/fields/Junior_Third_Party_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Junior_Third_Party_Fee_Type__c</fullName>
    <label>Junior Third Party Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
                <default>true</default>
                <label>Percent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>