force-app/main/default/objects/ResidentialLoanApplication/fields/Legal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Legal_Fee__c</fullName>
    <defaultValue>1500</defaultValue>
    <label>Legal Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>