force-app/main/default/objects/ResidentialLoanApplication/fields/lending_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>lending_Application_Type__c</fullName>
    <label>Lending Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lending Application Records</fullName>
                <default>true</default>
                <label>Lending Application Records</label>
            </value>
            <value>
                <fullName>A Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>