force-app/main/default/objects/ResidentialLoanApplication/fields/Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Loan Term</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>