force-app/main/default/objects/ResidentialLoanApplication/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>ADDMONTHS(
Interest_Adjustment_Date__c,
(Loan_Term__c*12)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>